# CheapCodex

./: .gitattributes  .gitignore  AGENTS.md.template  BENCHMARK-RESULTS.md  BENCHMARK.md  CODEX-INSTALL-PROMPT.md  INSTALL-CODEX.md  LICENSE  README.md  pyproject.toml
examples/: codex-global-AGENTS.md
scripts/: configure-deepseek.ps1  install-codex.ps1  install.ps1  install.sh
src/codex_cheap_worker/: __init__.py  benchmark.py  cli.py
tests/: test_cli.py
